spec/e2e/method/not_found.lit
type Foo {}

Foo().unknown(); # error: [line 3] Runtime error: Undefined property 'unknown'.
